2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-08-22  Andreas Kupries  <andreask@activestate.com>

	* faop.tcl: Extended the package with commands to convert finite
	* faop.man: automatons back to regular expressions, simplify
	* pkgIndex.tcl: regular expressions, and translate regular
	* tests/faop_regexp.test: expressions to Tcl syntax. Extended the
	  documentation and testsuite. This fixes [SF Tcllib RFE 1735601],
	  submitted by Lars Hellstroem <lars_h@users.sourceforge.net>. He
	  submitted the code used for this as well. Documentation however
	  by myself, based on his comments in the original code (dtx
	  format). Version of the package bumped to 0.4.

2007-08-21  Andreas Kupries  <andreask@activestate.com>

	* faop.man: Extend fromRegex and helper commands to accept zero
	* faop.tcl: arguments for "|" (Choice) and "." (Sequence), to
	* pkgIndex.tcl: represent empty language and epsilon
	  language. Documentation extended. Version of package fa::op
	  bumped to 0.3. This implements [SF Tcllib Bug 1759532], an RFE
	  submitted by Lars Hellstroem <lars_h@users.sourceforge.net>.

2007-08-14  Andreas Kupries <andreask@activestate.com>

	* tests/fa_symbols_at.test: Added proper documentation for the
	* fa.tcl: methods symbols@ and symbols@set. Extended method
	* fa.man: symbols@ to allow querying of symbols between two
	* pkgIndex.tcl: states, extended documentation, and updated
	  testsuite. Bumped package version to 0.3.

2007-06-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* faop.tcl: Replaced deprecated {expand} syntax in comments with
	  {*}.

2007-04-11  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* dacceptor.test: Added the switching of struct::set
	* dexec.test:     implementations to the testsuite.
	* fa.test:
	* faop.test:
	* tests/da_accept.test:
	* tests/da_cons.test:
	* tests/de_cons.test:
	* tests/de_exec.test: